[tool.poetry]
name = "hilinkmon"
version = "0.1.0"
description = ""
authors = ["theirix <theirix@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
xmltodict = "^0.12.0"
influxdb-client = "^1.19.0"
black = "^21.7b0"

[tool.poetry.dev-dependencies]
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"
